# home-work-azl

./: .dockerignore  Dockerfile  Dockerfile-API  README.md  api.py  pyproject.toml
docs/: azl-hmw-hld.drawio
infrastructure/: Chart.yaml  README.md  kong.sh  values.yaml
infrastructure/templates/: api-deployment.yaml  api-ingress.yml  cronjob.yml
src/: README.md  processor.py  pyproject.toml
src/api/: api.py
src/data_pipeline/: ai.py  c_newsitem.py  corruption_handler.py  enricher.py  ingestion.py  processor.py  remote_storage.py  validator.py
src/database/: dao_news.py  db.py  m_news.py
src/utils/: config.py  logger.py
