[project]
name = "home-work-azl"
version = "0.1.0"
description = "Science News Reader"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.34.2",
    "bs4>=0.0.2",
    "fastapi>=0.115.0",
    "huggingface-hub>=0.25.1",
    "numpy<2",
    "protobuf>=5.28.2",
    "psycopg2-binary>=2.9.9",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.3",
    "sentencepiece>=0.2.0",
    "sqlalchemy>=2.0.35",
    "torch<2.3.0",
    "transformers>=4.45.1",
    "uvicorn>=0.31.0",
]
